prevent blog_teaser content from causing content to overflow

--- a/_sass/components/blog_teaser.scss
+++ b/_sass/components/blog_teaser.scss
@@ -1,5 +1,6 @@
 .blog_teaser {
     font-family: $font-family-gotham-book;
+    overflow: hidden;
 
     .date-display{
         color: #9397A8;
